2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Only check for libgc when boehm-gc is selected as the
	garbage collector.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/awt-implementations/kaffe/java/awt/image/package.html,
	libraries/javalib/awt-implementations/kaffe/java/awt/package.html,
	libraries/javalib/awt-implementations/kaffe/java/awt/event/package.html: 
	Removed left over copies of Classpath's javadoc.

2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/Makefile.am (dist_kaffeawt_JAVA): 
	Removed duplicate files from GNU Classpath.

	* libraries/javalib/awt-implementations/kaffe/java/awt/ActionEvt.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/FocusEvt.java, 
	libraries/javalib/awt-implementations/kaffe/java/awt/Dialog.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/NativeGraphics.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Frame.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Window.java:
	Fixed compilation problems by using Kaffe specific methods, or removing#
	broken features.

	* libraries/javalib/awt-implementations/kaffe/java/awt/AWTError.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AWTException.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AWTPermission.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ActiveEvent.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Adjustable.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AlphaComposite.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BasicStroke.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Color.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ColorPaintContext.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ComponentOrientation.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Composite.java,