@@ -1,3 +1,10 @@
+2008-01-17  Doug Young  <doug@morphlix.com>
+
+	* kaffe/kaffevm/systems/unix-pthreads/signal.c (stackOverflowDetector),
+	kaffe/kaffevm/systems/unix-jthreads/signal.c (stackOverflowDetector): 
+	The "sig" argument should be used to clear the signal, since it could 
+	be either SIGSEGV or SIGBUS.
+
 2008-01-16  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac: Only check for libgc when boehm-gc is selected as the
